--- a/examples/ud2/ex3/style.css
+++ b/examples/ud2/ex3/style.css
@@ -32,10 +32,6 @@ i {
   clip-path: url(#clipping-with-text);
 }
 
-.item--css-mask img {
-  mask-image: url(http://yoksel.github.io/Sandbox/img/tiles/tile-transparent-black.png), linear-gradient(-45deg, black 20%, transparent 50%);
-  mask-repeat: space;
-}
 
 .item--svg-mask-html img,
 .item--svg-mask-svg image {
@@ -45,7 +41,7 @@ i {
 .item--css-background-clip .demo {
   width: 200px;
   height: 200px;
-  background: url(https://img-fotki.yandex.ru/get/5607/5091629.6b/0_612e6_b9039c0d_M.jpg) no-repeat;
+  background: url(./examples/ud2/ex3/img/chopper.webp) no-repeat;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
@@ -70,7 +66,10 @@ A {
   color: tomato;
 }
 
-H1, H2, H3, H4 {
+H1,
+H2,
+H3,
+H4 {
   margin-bottom: 1rem;
   font-family: Georgia, serif;
   line-height: 1.4;
@@ -86,6 +85,7 @@ H1 {
   font-size: 4em;
   font-style: italic;
 }
+
 H1:after {
   content: "Live demo";
   position: absolute;
@@ -129,6 +129,7 @@ code {
   padding: 35px 10px 7px;
   border-radius: 5px;
 }
+
 .comment code {
   display: inline-block;
   margin: 0;
@@ -137,6 +138,7 @@ code {
   background: #EEE;
   color: #777;
 }
+
 code:before {
   left: 0;
   right: 0;
@@ -148,6 +150,7 @@ code:before {
   font-weight: bold;
   font-style: italic;
 }
+
 .comment code:before {
   content: none;
 }
@@ -155,6 +158,7 @@ code:before {
 .code--css {
   background: #f7edba;
 }
+
 .code--css:before {
   content: "CSS";
   background: #f2e18c;
@@ -164,6 +168,7 @@ code:before {
 .code--svg {
   background: #e6f4be;
 }
+
 .code--svg:before {
   content: "SVG";
   background: #d6ec93;
@@ -184,6 +189,7 @@ code:before {
   padding: 2rem 0;
   conter-reset: mylist;
 }
+
 .wrapper:after {
   content: "";
   display: table;
@@ -199,6 +205,7 @@ code:before {
   border-bottom: 1px solid #DDD;
   counter-increment: mylist;
 }
+
 .item:before {
   content: counter(mylist);
   position: absolute;
@@ -207,6 +214,7 @@ code:before {
   font: 2rem/1 Georgia, serif;
   color: #EEE;
 }
+
 .item:after {
   content: "";
   display: table;
@@ -218,6 +226,7 @@ code:before {
   float: left;
   margin-right: 30px;
 }
+
 .demo:before {
   content: "";
   display: block;
@@ -227,10 +236,11 @@ code:before {
   right: 0;
   bottom: 0;
   left: 0;
-  background: url(https://img-fotki.yandex.ru/get/5607/5091629.6b/0_612e6_b9039c0d_M.jpg) no-repeat;
+  background: url(./examples/ud2/ex3/img/chopper.webp) no-repeat;
   opacity: 0;
   transition: 0.7s;
 }
+
 .item:hover .demo:before {
   opacity: 0.4;
 }
@@ -260,7 +270,7 @@ code:before {
   width: 24px;
   height: 24px;
   margin-right: 7px;
-  background: url(https://yoksel.github.io/assets/img/sprite-browsers.png) 0 0 no-repeat;
+  background: url(./examples/ud2/ex3/img/sprite-browsers.png) 0 0 no-repeat;
   vertical-align: middle;
 }
 
