--- a/examples/ud6/ex1/style.css
+++ b/examples/ud6/ex1/style.css
@@ -1,121 +1,61 @@
-h1 {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  position: relative;
+  width: 19rem;
+  height: 19rem;
+}
+
+#tetraedro {
+  animation: 5s rotate linear infinite;
+  transform-style: preserve-3d;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateY(0) rotateZ(20deg) rotateX(-20deg);
   }
-  
-  #cube .front {
-    transform: 
-      translateZ(100px);
+
+  100% {
+    transform: rotateY(360deg) rotateZ(20deg) rotateX(-20deg);
   }
-  
-  #cube .back {
-    transform: 
-      rotateX(-180deg)
-      translateZ(100px);
-  }
-  
-  #cube .right {
-    transform:
-      rotateY(90deg)
-      translateZ(100px);
-  }
-  
-  #cube .left {
-    transform:
-      rotateY(-90deg)
-      translateZ(100px);
-  }
-  
-  #cube .top {
-    transform:
-      rotateX(90deg)
-      translateZ(100px);
-  }
-  
-  #cube .bottom {
-    transform:
-      rotateX(-90deg)
-      translateZ(100px);
-  }
-  
-  .container {
-    width: 200px;
-    height: 200px;
-    position: relative;
-    margin: 0 auto 40px;
-    border: 1px solid #FFF;
-    
-    perspective: 1000px;
-    perspective-origin: 50% 100%;
-  }
-  
-  #cube {
-    width: 100%;
-    height: 100%;
-    top: 100px;
-    position: absolute;
-    
-    transform-style: preserve-3d;
-    
-    transition: transform 6s;
-  }
-  
-  #cube:hover{
-    animation: rotate 2s linear infinite;
-  }
-  
-  #cube div {
-    background: hsla(0, 85%, 50%, 0.8);
-    display: block;
-    position: absolute;
-    width: 200px;
-    height: 100px;
-    
-    margin: 0 auto;  
-    
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 500%;
-    text-align: center;
-    padding: 50px 0;
-  }
-  
-  @keyframes rotate {
-    0% {
-      transform: rotateX(0deg) rotateY(0deg);
-    }
-    100% {
-      transform: rotateX(360deg) rotateY(360deg);
-    }
-  }
-  
-  
-  .dot {
-    display: block;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    background: #fff;
-    border-radius: 15px;  
-  }
-  
-  .front .dot1 { top: 85px; left: 85px; }
-  .back .dot1 { top: 45px; left: 45px; }
-  .back .dot2 { top: 125px; left: 125px; }
-  .right .dot1 { top: 45px; left: 45px; }
-  .right .dot2 { top: 85px; left: 85px; }
-  .right .dot3 { top: 125px; left: 125px; }
-  .left .dot1 { top: 45px; left: 45px; }
-  .left .dot2 { top: 45px; left: 125px; }
-  .left .dot3 { top: 125px; left: 45px; }
-  .left .dot4 { top: 125px; left: 125px; }
-  .top .dot1 { top: 45px; left: 45px; }
-  .top .dot2 { top: 45px; left: 125px; }
-  .top .dot3 { top: 85px; left: 85px; }
-  .top .dot4 { top: 125px; left: 45px; }
-  .top .dot5 { top: 125px; left: 125px; }
-  .bottom .dot1 { top: 45px; left: 45px; }
-  .bottom .dot2 { top: 45px; left: 85px; }
-  .bottom .dot3 { top: 45px; left: 125px; }
-  .bottom .dot4 { top: 125px; left: 45px; }
-  .bottom .dot5 { top: 125px; left: 85px; }
-  .bottom .dot6 { top: 125px; left: 125px; }
+}
+
+.triangulo {
+  height: 0;
+  width: 0;
+  border-right: 75px solid transparent;
+  border-left: 75px solid transparent;
+  border-bottom: 150px solid rgba(255, 80, 80, 0.37);
+  position: absolute;
+}
+
+.cara1 {
+  border-bottom-color: rgba(80, 255, 211, 0.37);
+  transform: rotateY(120deg) translateZ(20px) translateY(0px) rotateX(17deg);
+}
+
+.cara2 {
+  border-bottom-color: rgba(255, 80, 80, 0.37);
+  transform: rotateY(-120deg) translateZ(20px) translateY(0px) rotateX(17deg);
+}
+
+.cara3 {
+  border-bottom-color: rgba(238, 255, 80, 0.37);
+  transform: rotateY(0deg) translateZ(20px) translateY(0px) rotateX(17deg);
+}
+
+.cara4 {
+  border-bottom: 126px solid rgba(80, 135, 255, 0.37);
+  transform: rotateY(0deg) translateZ(-20px) translateY(84px) rotateX(90deg);
+}
