--- a/examples/ud6/ex2/style.css
+++ b/examples/ud6/ex2/style.css
@@ -10,52 +10,88 @@ body {
   align-items: center;
 }
 
-.container {
-  position: relative;
-  width: 19rem;
-  height: 19rem;
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
-#tetraedro {
-  animation: 5s rotate linear infinite;
+.cube .front {
+  transform: translateZ(100px);
+}
+
+.cube .back {
+  transform: rotateX(-180deg) translateZ(100px);
+}
+
+.cube .right {
+  transform: rotateY(90deg) translateZ(100px);
+}
+
+.cube .left {
+  transform: rotateY(-90deg) translateZ(100px);
+}
+
+.cube .top {
+  transform: rotateX(90deg) translateZ(100px);
+}
+
+.cube .bottom {
+  transform: rotateX(-90deg) translateZ(100px);
+}
+
+.container {
+  width: 200px;
+  height: 200px;
+  /* position: relative; */
+  margin: 0 auto 40px;
+  border: 1px solid #fff;
+
+  perspective: 1000px;
+  perspective-origin: center;
+}
+
+.cube {
+  width: 100%;
+  height: 100%;
+  position: absolute;
   transform-style: preserve-3d;
+  transition: transform 6s;
+}
+
+#cube1 {
+  animation: rotate 10s linear infinite;
+}
+
+#cube2 {
+  transform-style: preserve-3d;
+  transform: scale3d(0.7, 0.7, 0.7) translateY(48px);
+}
+
+.cube div:not(#cube2) {
+  background: hsla(212, 85%, 50%, 0.5);
+  box-shadow: 0px 0px 49px 7px rgba(46, 189, 255, 0.46);
+  display: block;
+  position: absolute;
+  width: 200px;
+  height: 100px;
+
+  margin: 0 auto;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 500%;
+  text-align: center;
+  padding: 50px 0;
+}
+
+@keyframes identifier {
+  
 }
 
 @keyframes rotate {
   0% {
-    transform: rotateY(0) rotateZ(20deg) rotateX(-20deg);
+    transform: rotateY(0deg) rotateY(0deg);
   }
-
   100% {
-    transform: rotateY(360deg) rotateZ(20deg) rotateX(-20deg);
+    transform: rotateY(360deg) rotateY(0deg);
   }
-}
-
-.triangulo {
-  height: 0;
-  width: 0;
-  border-right: 75px solid transparent;
-  border-left: 75px solid transparent;
-  border-bottom: 150px solid rgba(255, 80, 80, 0.37);
-  position: absolute;
-}
-
-.cara1 {
-  border-bottom-color: rgba(80, 255, 211, 0.37);
-  transform: rotateY(120deg) translateZ(20px) translateY(0px) rotateX(17deg);
-}
-
-.cara2 {
-  border-bottom-color: rgba(255, 80, 80, 0.37);
-  transform: rotateY(-120deg) translateZ(20px) translateY(0px) rotateX(17deg);
-}
-
-.cara3 {
-  border-bottom-color: rgba(238, 255, 80, 0.37);
-  transform: rotateY(0deg) translateZ(20px) translateY(0px) rotateX(17deg);
-}
-
-.cara4 {
-  border-bottom: 126px solid rgba(80, 135, 255, 0.37);
-  transform: rotateY(0deg) translateZ(-20px) translateY(84px) rotateX(90deg);
 }
